The homepage background is now always fixed, so ios is happy. navigation links are yellow. Smaller font on mobile. Changed the analysis svg

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -30,13 +30,6 @@
 
 }
 
-@supports (background-attachment: fixed) {
-  #homepage-pic {
-    background-attachment: fixed;
-  }
-}
-
-
 .homepage-flex {
   display: flex;
   flex-direction: column;
