--- a/css/main.css
+++ b/css/main.css
@@ -178,7 +178,7 @@ a.anchor {
   }
 
   p {
-    font-size: 1.2em;
+    font-size: 1.0em;
   }
 }
 
