--- a/css/navigation.css
+++ b/css/navigation.css
@@ -26,7 +26,7 @@ ul {
 }
 
 .menu a {
-    color: #F5F5F5;
+    color: #fbb13c;
     /* Remove the underline */
     text-decoration: none;
     outline: 0;
